Added HomeGenie addon, added UART buffer size check

--- a/firmware/1.3/CHANGES
+++ b/firmware/1.3/CHANGES
@@ -7,4 +7,4 @@ Version 1.3 (25.12.2015):
 - Lines terminated with CRLF rather than LF
 - Automatically loads default settings on configuration version mismatch (after upgrading)
 - Default baud rate changed to 115200
-
+- Removed BMC mode (custom protocol)
